--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,30 +2,31 @@
   home works!
 </p> -->
 <div class="paging-1" >
-   
-      
+
+      <!--test commit-->
+
   <!-- first page -->
   <div class="main-img">
     <div>
       <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
       <button mat-button-raised (click)="AiMlDlButtonClick()">AI ML DL</button>
     </div>
-      
+
     <div>
         <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
         <!-- <button mat-button-raised (click)="gameDevButtonClick()">Game developing</button> -->
     </div>
-  
+
     <div>
         <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
         <!-- <button mat-button-raised (click)="digiMarketingButtonClick()">Digital Marketing</button> -->
     </div>
-    
+
     <div>
         <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
         <!-- <button mat-button-raised (click)="swDevButtonClick()">SW Dev</button> -->
     </div>
-  
+
     <div>
         <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
         <!-- <button mat-button-raised (click)="swDevButtonClick()">SW Dev</button> -->
