fixed <router-outlet> and more

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- <div>
+ <div>
     <app-tool-bar></app-tool-bar>
-</div> -->
-<router-outlet></router-outlet>
+</div>
 
-<button>f</button>
-<!--tesr-->
+
+<router-outlet></router-outlet>
 
 <p>
     this is a test
