--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,3 +29,30 @@
     transform: rotateX(360deg);
     transition: 0.8s;
 }
+
+.findoutmore button{
+  display: block;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+.findoutmore button{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+  display: none;
+}
+
+.findoutmore button{
+  display: block;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
