--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,10 @@
   <div class="main-img">
     <div>
       <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
-      <button mat-button-raised (click)="AiMlDlButtonClick()">AI ML DL</button>
+      <!--<button mat-button-raised (click)="AiMlDlButtonClick()">AI ML DL</button>-->
+      <div class="findoutmore button">
+        <button class="btn btn-success green-button" (click)="AiMlDlButtonClick()">TAKE A PEAK</button>
+      </div>
     </div>
 
     <div>
@@ -48,10 +51,13 @@
 
 </div>
 
-<div>
-<h1>Clients</h1>
-<mat-card>
-  <p>this is card</p>
+
+
+
+<div >
+<mat-card style="background-image: url(./assets/images/home/tumblr.gif);background-size: contain;height:400px">
+  <h1>Clients</h1>
+  <p>this is clients</p>
 </mat-card>
 </div>
 
