--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,36 +3,48 @@
 </p> -->
 <div class="paging-1" >
 
-      <!--test commit-->
 
   <!-- first page -->
-  <div class="main-img">
-    <div>
-      <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
+  <div class="main-img row">
+
+    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
+      <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
       <!--<button mat-button-raised (click)="AiMlDlButtonClick()">AI ML DL</button>-->
       <div class="findoutmore button">
-        <button class="btn btn-success green-button" (click)="AiMlDlButtonClick()">TAKE A PEAK</button>
+        <button mat-button-raised class="btn btn-success green-button" (click)="AiMlDlButtonClick()">button</button>
       </div>
     </div>
 
-    <div>
-        <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
+    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
+        <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
         <!-- <button mat-button-raised (click)="gameDevButtonClick()">Game developing</button> -->
+      <div class="findoutmore button">
+        <button mat-button-raised class="btn btn-success green-button" (click)="AiMlDlButtonClick()">button1</button>
+      </div>
     </div>
 
-    <div>
-        <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
+    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
+        <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
         <!-- <button mat-button-raised (click)="digiMarketingButtonClick()">Digital Marketing</button> -->
+      <div class="findoutmore button">
+        <button mat-button-raised class="btn btn-success green-button" (click)="AiMlDlButtonClick()">button2</button>
+      </div>
     </div>
 
-    <div>
-        <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
+    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
+        <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
         <!-- <button mat-button-raised (click)="swDevButtonClick()">SW Dev</button> -->
+      <div class="findoutmore button">
+        <button mat-button-raised class="btn btn-success green-button" (click)="AiMlDlButtonClick()">button3</button>
+      </div>
     </div>
 
-    <div>
-        <img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>
+    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
+        <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
         <!-- <button mat-button-raised (click)="swDevButtonClick()">SW Dev</button> -->
+      <div class="findoutmore button">
+        <button mat-button-raised class="btn btn-success green-button" (click)="AiMlDlButtonClick()">button4</button>
+      </div>
     </div>
   </div>
 </div>
