--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -16,7 +16,7 @@
           <img src="../../assets/images/toolbar/companyLogo.jpg" alt="" class="company-logo">
       </button></span>
       <span>
-        <button class="toolbar-button">
+        <button class="toolbar-button seperator">
             BrainArts International
         </button> </span>
       <span>DREAM IT | WISH IT | DO IT</span>
