--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,9 @@
           <a href="https://web.facebook.com"
              target="_blank">
             <span>
-              <i class="fa fa-facebook"></i>
+              <!--<i class="fab fa-facebook-square"></i>-->
+              <!--<i class="fa fa-facebook"></i>-->
+
             </span>
           </a>
         </div>
