--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,7 +13,27 @@
     margin-top: auto;
     margin-bottom: auto;
     min-height: 100%;
+    height: 100vh;
 }
+
+.companyLogo{
+  padding-top: 8%;
+}
+
+.companyLogo h1{
+  font-size: 80px;
+  color: white;
+  margin: 15px 0 30px 0;
+  font-family: AvenirNextLTPro, "Open Sans", serif;
+}
+.companyLogo h2{
+  font-size: 80px;
+  color: white;
+  font-weight:300;
+  line-height:30px;
+  font-family: AvenirNextLTPro, "Open Sans", serif;
+}
+
 .helloBtn {
     background: red;
     box-shadow: 10px 10px 8px #777777;
@@ -22,12 +42,13 @@
     font-size: 30px;
     cursor: pointer;
     color: blanchedalmond;
+    margin-top: -200px;
 }
 .helloBtn:hover {
     background: yellow;
     color: black;
     transform: rotateX(360deg);
-    transition: 0.8s;
+    transition: 1.4s;
 }
 
 /* Create five equal columns that floats next to each other */
@@ -41,10 +62,9 @@
 
 .main-divs{
   height: calc(650px);
-  width:  calc(269px);
+  width:  20%;
   display: inline-block;
-
-  background-size: contain;
+  /*background-size: contain;*/
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -56,5 +76,116 @@
 .green-button {
   position: absolute;
   top: 50%;
-  /*cursor: pointer;*/
+  font-size: 14px;
+  text-transform: uppercase;
+  background-image: none;
+  text-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+  transition: background-color 1s;
+  padding: 6px 15px;
+  margin-top: 100px;
+  margin-left: -68px;
+}
+
+
+
+/*.main-divs:hover {*/
+  /*background: darkgrey;*/
+  /*color: black;*/
+  /*text-align: center;*/
+  /*!*transform: rotateX(360deg);*!*/
+  /*!*transition: 0.8s;*!*/
+/*}*/
+
+
+.clients h1{
+  font-family: Fertigo Pro, sans-serif;
+  color: #777777;
+  font-size: 30px;
+  padding-top: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.green-button:hover{
+  background-color: orange;
+  color: white;
+  /*outline: 1px solid orange;*/
+  /*outline-offset: 5px;*/
+  visibility: visible;
+
+}
+.package-button {
+  position: absolute;
+  top: 35%;
+  background-image: none;
+  text-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+  transition: background-color 1s;
+  padding: 80px 115px;
+
+  /*-webkit-transform: translate(-50%, -50%);*/
+  /*transform: translate(-50%, -50%);*/
+  /*display: none;*/
+}
+
+
+.package-button p{
+  position: absolute;
+  top: 66%;
+  color: white;
+  text-align: center;
+  margin-left: -20px;
+}
+
+
+.main-divs:hover::before{
+  content: "";
+  background-color: rgba(0, 0, 0, 0.7);
+  display: block;
+  height: 650px;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+
+.main-divs:hover .findoutmore button{
+  /*display: block;*/
+  /*animation-duration: 1s;*/
+  /*animation-fill-mode: both;*/
+  /*animation-name: fadeIn;*/
+  visibility: visible;
+}
+
+.main-divs .findoutmore button{
+visibility: hidden;
+}
+
+.home-sections{
+  height: 100px;
+  /*margin-top: 40px;*/
+  text-align: center;
+  color: #4d4d4d;
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 35px;
+  padding: 60px 20px;
+  font-family: arial, sans-serif;
+}
+.clients{
+  background-size: 100%;
+  height: 50vh;
+}
+
+.projects{
+  background-size: 50%;
+  height: 75vh;
+}
+
+.projects{
+  margin-left: 20%;
+  margin-top: 2%;
 }
