home page & toolbar changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
         </div>
         <div>
           <a href="https://twitter.com/sistouroperator" target="_blank">
-            <span>
-              <i class="fa fa-twitter"></i>
+            <span>dddddddddddddddddddd
+              <i class="fab fa-accessible-icon"></i>
             </span>
           </a>
         </div>
