--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 
   <!-- first page -->
-  <div class="main-img row">
+  <div class="main-img row" style="overflow: hidden">
 
     <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
       <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
@@ -14,9 +14,10 @@
       <div class="findoutmore button">
         <button mat-button-raised class="btn btn-danger green-button" (click)="AiMlDlButtonClick()">FIND OUT MORE</button>
       </div>
+      <div class="txt_cont">AI Podcast: How AI Can Improve</div>
     </div>
 
-    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg')">
+    <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg');">
         <!--<img src="../assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg" class="main-img-set"/>-->
         <!-- <button mat-button-raised (click)="gameDevButtonClick()">Game developing</button> -->
       <div class="package-button">
@@ -71,6 +72,8 @@
 <div style="background-image: url(./assets/images/home/tumblr.gif)">
   <div class="secondDiv">
     <div class="companyLogo">
+        <!--<div class="col-md-2 companyLogoDiv" style="background-image: url('.././assets/images/toolbar/companyLogo.jpg');">
+        </div>-->
       <img src=".././assets/images/toolbar/companyLogo.jpg" style="width: 200px;height: 200px">
       <h1>Hello!</h1>
       <h2>Meet BrainArts Family</h2>
@@ -100,22 +103,39 @@
   <div class="home-sections">
     <h1>Projects</h1>
 </div>
-    <!--///////////////////////////////////-->
-<div class="projects">
-<div class="row">
-  <div style="background-color: aqua;width: 440px;height: 440px"></div>
-  <div>
-    <div style="background-color: indigo;width: 440px;height: 220px"></div>
-    <div>
-      <div style="background-color: #777777;width: 220px;height: 220px"></div>
+
+
+
+
+<div class="row wow bounceInUp" style="padding: 30px" >
+  <div class="col-md-6" style="overflow: hidden">
+    <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg'); height: 350px;">11111111111</div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="row">
+
+      <div class="col-md-12" style="background-color: #afaeae; padding-left: 0;padding-right: 0px;overflow: hidden">
+        <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg'); height: 170px;">22222222</div>
+      </div>
+
+      <div class="col-md-6" style="padding-top: 10px; padding-left: 0;padding-right: 7.5px;overflow: hidden">
+        <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');height: 170px;">33333333</div>
+      </div>
+
+      <div class="col-md-6" style="padding-top: 10px; padding-left: 7.5px;padding-right: 0px;overflow: hidden">
+        <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');height: 170px;">44444444</div>
+      </div>
     </div>
   </div>
 </div>
-</div>
-    <!--///////////////////////////////////-->
+
+
+
 
 
 <mat-card></mat-card>
+
 
 <div>
 <h1>Details</h1>
