--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -22,9 +22,8 @@
       <span>DREAM IT | WISH IT | DO IT</span>
       <span class="example-spacer"></span>
       <span>
-        <button class="toolbar-button">COMPANY</button>
+        <button class="toolbar-button" style="border-left:1px solid darkgray;border-right:1px solid darkgray">COMPANY</button>
       </span>
-      <span>|</span>
       <span>
         <button class="toolbar-button">CONTACT</button></span>
     </mat-toolbar-row>
