--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,10 +14,24 @@
     margin-bottom: auto;
     min-height: 100%;
     height: 100vh;
+
+  overflow: hidden;
 }
+
+/*.companyLogoDiv{
+  align-content: center;
+  background-size: cover;
+  height: 200px;
+}*/
 
 .companyLogo{
   padding-top: 8%;
+
+  height: 300px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: all .5s;
 }
 
 .companyLogo h1{
@@ -67,6 +81,12 @@
   /*background-size: contain;*/
   background-repeat: no-repeat;
   background-position: center;
+
+  /*companyLogo*/
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: all .5s;
 }
 
 .findoutmore {
@@ -90,13 +110,9 @@
 
 
 
-/*.main-divs:hover {*/
-  /*background: darkgrey;*/
-  /*color: black;*/
-  /*text-align: center;*/
-  /*!*transform: rotateX(360deg);*!*/
-  /*!*transition: 0.8s;*!*/
-/*}*/
+.main-divs:hover {
+  transform: scale(1.1);
+}
 
 
 .clients h1{
@@ -143,7 +159,7 @@
 
 
 .main-divs:hover::before{
-  content: "";
+  /*content: "";   ---mouse on div it become dark-----*/
   background-color: rgba(0, 0, 0, 0.7);
   display: block;
   height: 650px;
@@ -175,17 +191,57 @@ visibility: hidden;
   padding: 60px 20px;
   font-family: arial, sans-serif;
 }
+
 .clients{
   background-size: 100%;
   height: 50vh;
 }
 
-.projects{
-  background-size: 50%;
-  height: 75vh;
+
+@media (max-width: 576px) {
+  .bird{
+    height: 20px;
+  }
 }
 
+/*.projects{*/
+  /*background-size: 50%;*/
+  /*height: 75vh;*/
+/*}*/
+
+/*.projects{*/
+  /*margin-left: 20%;*/
+  /*margin-top: 2%;*/
+/*}*/
+
 .projects{
-  margin-left: 20%;
-  margin-top: 2%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: all .5s;
+}
+
+.projects:hover{
+  transform: scale(1.1);
+}
+
+.projects-text-wrapper{
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.txt_cont{
+  text-align: left;
+  position: absolute;
+  padding: 20px 2vw;
+  width: 100%;
+  font-weight: 600;
+  font-size: 20px;
+  color: #fff;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .75);
 }
