--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,6 @@
       <div class="findoutmore button">
         <button mat-button-raised class="btn btn-danger green-button" (click)="AiMlDlButtonClick()">FIND OUT MORE</button>
       </div>
-      <div class="txt_cont">AI Podcast: How AI Can Improve</div>
     </div>
 
     <div class="main-divs" style="background-image: url('./assets/images/home/9c496e431496f716d33259c68d353aefdc66160f.jpeg');">
@@ -107,24 +106,28 @@
 
 
 
-<div class="row wow bounceInUp" style="padding: 30px" >
-  <div class="col-md-6" style="overflow: hidden">
-    <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg'); height: 350px;">11111111111</div>
+<div class="row wow bounceInUp" style="padding-left: 200px;margin-top: 40px">
+  <div class="col-md-5 project-section">
+    <div class="projects projects1" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');">11111111111</div>
+    <div class="txt_cont">Test</div>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-5">
     <div class="row">
 
-      <div class="col-md-12" style="background-color: #afaeae; padding-left: 0;padding-right: 0px;overflow: hidden">
-        <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg'); height: 170px;">22222222</div>
+      <div class="col-md-12 project-section1">
+        <div class="projects projects2" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');">22222222</div>
+        <div class="txt_cont">Test 1</div>
       </div>
 
-      <div class="col-md-6" style="padding-top: 10px; padding-left: 0;padding-right: 7.5px;overflow: hidden">
-        <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');height: 170px;">33333333</div>
+      <div class="col-md-6 project-section2">
+        <div class="projects projects2" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');">33333333</div>
+        <div class="txt_cont">Test 2</div>
       </div>
 
-      <div class="col-md-6" style="padding-top: 10px; padding-left: 7.5px;padding-right: 0px;overflow: hidden">
-        <div class="projects" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');height: 170px;">44444444</div>
+      <div class="col-md-6 project-section3">
+        <div class="projects projects2" style="background-image: url('https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg');">44444444</div>
+        <div class="txt_cont">Test 3</div>
       </div>
     </div>
   </div>
