--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -197,22 +197,12 @@ visibility: hidden;
   height: 50vh;
 }
 
-
+/*
 @media (max-width: 576px) {
   .bird{
     height: 20px;
   }
-}
-
-/*.projects{*/
-  /*background-size: 50%;*/
-  /*height: 75vh;*/
-/*}*/
-
-/*.projects{*/
-  /*margin-left: 20%;*/
-  /*margin-top: 2%;*/
-/*}*/
+}*/
 
 .projects{
   background-position: 50%;
@@ -277,3 +267,18 @@ visibility: hidden;
   padding-top: 12.5px;
   overflow: hidden;
 }
+/*
+@media only screen and (min-width: 768px) {
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}*/
